[gd_scene load_steps=48 format=3 uid="uid://bi5dq07val520"]

[ext_resource type="Script" uid="uid://b1lvas548cyy8" path="res://scripts/knight.gd" id="1_knight"]
[ext_resource type="Texture2D" uid="uid://r4cxyg1osvas" path="res://Assets/NightBorne.png" id="2_sprite"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3i0j8"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxgmm"]
atlas = ExtResource("2_sprite")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dyjn"]
atlas = ExtResource("2_sprite")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fsgc"]
atlas = ExtResource("2_sprite")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_swm0g"]
atlas = ExtResource("2_sprite")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2txo"]
atlas = ExtResource("2_sprite")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvyd6"]
atlas = ExtResource("2_sprite")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_14u3r"]
atlas = ExtResource("2_sprite")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cm67"]
atlas = ExtResource("2_sprite")
region = Rect2(640, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8y5l"]
atlas = ExtResource("2_sprite")
region = Rect2(720, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw3uw"]
atlas = ExtResource("2_sprite")
region = Rect2(800, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ok4f"]
atlas = ExtResource("2_sprite")
region = Rect2(880, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7bgd"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi1vv"]
atlas = ExtResource("2_sprite")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_06ia3"]
atlas = ExtResource("2_sprite")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0iq"]
atlas = ExtResource("2_sprite")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ko4r"]
atlas = ExtResource("2_sprite")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpjby"]
atlas = ExtResource("2_sprite")
region = Rect2(1040, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouiji"]
atlas = ExtResource("2_sprite")
region = Rect2(1120, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7g6j"]
atlas = ExtResource("2_sprite")
region = Rect2(1200, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlkoa"]
atlas = ExtResource("2_sprite")
region = Rect2(1280, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yp3h"]
atlas = ExtResource("2_sprite")
region = Rect2(1360, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5rl"]
atlas = ExtResource("2_sprite")
region = Rect2(1440, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujkqr"]
atlas = ExtResource("2_sprite")
region = Rect2(1520, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx178"]
atlas = ExtResource("2_sprite")
region = Rect2(1600, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2y7m"]
atlas = ExtResource("2_sprite")
region = Rect2(1680, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8aj7"]
atlas = ExtResource("2_sprite")
region = Rect2(1760, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8y5s"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhhm5"]
atlas = ExtResource("2_sprite")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdmsg"]
atlas = ExtResource("2_sprite")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd0la"]
atlas = ExtResource("2_sprite")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggoaa"]
atlas = ExtResource("2_sprite")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pn50"]
atlas = ExtResource("2_sprite")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt444"]
atlas = ExtResource("2_sprite")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2wyf"]
atlas = ExtResource("2_sprite")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_irm4b"]
atlas = ExtResource("2_sprite")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m012m"]
atlas = ExtResource("2_sprite")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vh21"]
atlas = ExtResource("2_sprite")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgw7t"]
atlas = ExtResource("2_sprite")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm0xy"]
atlas = ExtResource("2_sprite")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvlk4"]
atlas = ExtResource("2_sprite")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnu1q"]
atlas = ExtResource("2_sprite")
region = Rect2(400, 80, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_dp28g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i0j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxgmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dyjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fsgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swm0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2txo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvyd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14u3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cm67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8y5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw3uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ok4f")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7bgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi1vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06ia3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ko4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpjby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouiji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7g6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlkoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yp3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujkqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx178")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2y7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8aj7")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8y5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhhm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd0la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggoaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pn50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt444")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2wyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irm4b")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m012m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vh21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgw7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm0xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvlk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnu1q")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_knight"]
radius = 9.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detect"]
radius = 100.0

[node name="Knight" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_knight")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dp28g")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_knight")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detect")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(4, 7)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_knight")

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-4, 8)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_knight")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
